fix jumpsuits desktop size table design

--- a/assets/size-table.css
+++ b/assets/size-table.css
@@ -87,6 +87,7 @@ div.size-table-overlay {
 		bottom: 50%;
 		left: 50%;
 		transform: translate(-50%,50%);
+		overflow-y: scroll;
 	}
 
 	.size-table tbody tr td, .size-table thead th {
